force-app/main/default/objects/Log__c/fields/Log_Number__c.field-meta.xml
<CustomField>
    <fullName>Log_Number__c</fullName>
    <externalId>true</externalId>
    <label>Log Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>