force-app/main/default/objects/Log__c/fields/Record__c.field-meta.xml
<CustomField>
    <fullName>Record__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+  Record_Id__c ,  &apos;Open Record&apos;,&apos;_self&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record</label>
    <type>Text</type>
</CustomField>