force-app/main/default/objects/Log__c/listViews/Debug.recordType-meta.xml
<RecordType>
    <fullName>Debug</fullName>
    <active>true</active>
    <label>Debug</label>
</RecordType>