force-app/main/default/objects/Log__c/listViews/Debug.listView-meta.xml
<ListView>
    <fullName>Debug</fullName>
    <columns>NAME</columns>
    <columns>Log_Number__c</columns>
    <columns>Operation__c</columns>
    <columns>Record__c</columns>
    <columns>User__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Log__c.Debug</value>
    </filters>
    <label>Debug</label>
</ListView>