force-app/main/default/objects/Log__c/listViews/Integeration.listView-meta.xml
<ListView>
    <fullName>Integeration</fullName>
    <columns>NAME</columns>
    <columns>Log_Number__c</columns>
    <columns>User__c</columns>
    <columns>Record__c</columns>
    <columns>Response_Status_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Log__c.Integration</value>
    </filters>
    <label>Integration</label>
</ListView>